--- a/package.json
+++ b/package.json
@@ -1,27 +1,47 @@
 {
-  "name": "nextjs-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
-  }
+    "name": "@arghyadutta/solana-dapp-nextjs-starter",
+    "version": "0.1.20",
+    "author": "Arghya Dutta",
+    "repository": "https://github.com/NemesisLW/solana-dapp-nextjs-starter",
+    "license": "Apache-2.0",
+    "private": "false",
+    "publishConfig": {
+        "access": "public"
+    },
+    "bin": {
+        "create-nextjs-sol-dapp": "./dist/index.js"
+    },
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "clean": "shx rm -rf .next .swc lib",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@solana/wallet-adapter-base": "^0.9.23",
+        "@solana/wallet-adapter-react": "^0.15.35",
+        "@solana/wallet-adapter-react-ui": "^0.9.34",
+        "@solana/wallet-adapter-wallets": "^0.19.24",
+        "@solana/web3.js": "^1.87.6",
+        "next": "14.0.4",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.0.4",
+        "postcss": "^8",
+        "prettier": "^3.1.1",
+        "shx": "^0.3.4",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
