--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
     "name": "@arghyad/create-next-sol-dapp",
     "version": "0.0.2",
     "author": "Arghya Dutta",
-    "repository": "https://github.com/NemesisLW/solana-dapp-nextjs-starter",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NemesisLW/solana-dapp-nextjs-starter"
+      },
     "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    },
     "bin": {
         "@arghyad/create-next-sol-dapp": "./dist/index.js"
     },
     "files": [
-        "dist"
+        "dist",
+        "public",
+        "src",
+        ".eslintrc.json",
+        ".gitignore",
+        "next.config.js",
+        "postcss.config.js",
+        "tailwindcss.config.js",
+        "tsconfig.js"
     ],
     "scripts": {
         "clean": "shx rm -rf .next .swc lib",
